Serios iteration  on  Identifiers server (work-in-progress... failing unit tests)
