# ncats/translator/identifiers/server/openapi_server/controllers/admins_controller.py
@@ -2,7 +2,7 @@ import connexion
 import six
 
 from openapi_server.model.identifier_map import IdentifierMap  # noqa: E501
-from openapi_server.model.inline_response200 import InlineResponse200  # noqa: E501
+from openapi_server.model.identifier_map_id import IdentifierMapId  # noqa: E501
 from openapi_server import util
 
 
@@ -14,7 +14,7 @@ def load_identifier_map(identifier_map=None):  # noqa: E501
     :param identifier_map: Identifier map to be uploaded
     :type identifier_map: dict | bytes
 
-    :rtype: InlineResponse200
+    :rtype: IdentifierMapId
     """
     if connexion.request.is_json:
         identifier_map = IdentifierMap.from_dict(connexion.request.get_json())  # noqa: E501
@@ -29,7 +29,7 @@ def update_identifier_map(identifier_map=None):  # noqa: E501
     :param identifier_map: Identifier map to be updated
     :type identifier_map: dict | bytes
 
-    :rtype: InlineResponse200
+    :rtype: IdentifierMapId
     """
     if connexion.request.is_json:
         identifier_map = IdentifierMap.from_dict(connexion.request.get_json())  # noqa: E501
