# ncats/translator/identifiers/server/openapi_server/controllers/controller_impl.py
@@ -1,0 +1,135 @@
+from typing import List
+from uuid import uuid4
+
+from ncats.translator.identifiers import IdentifierResolverException
+from ncats.translator.identifiers.server.openapi_server.model.identifier_list_id import IdentifierListId
+from ncats.translator.identifiers.server.openapi_server.model.identifier_mapping import IdentifierMapping
+from ncats.translator.identifiers.server.resolver import Resolver
+
+"""
+Handler delegation functions to inject and connect into OpenAPI controller stubs:
+
+from .controller_impl import (
+    handle_identifier_list, 
+    handle_list_identifier_keys, 
+    handle_translate, 
+    handle_translate_one
+)
+"""
+
+#  A simple-minded cache for client uploaded identifier lists
+_identifier_list_cache = {}
+
+
+def handle_identifier_list(request_body) -> IdentifierListId:
+    """post a list of identifiers
+
+    Post a list of source identifiers for subsequent translation  # noqa: E501
+
+    :param request_body: Identifier list to post on server (for translation)
+    :type request_body: List[str]
+
+    :rtype: IdentifierListId
+    """
+    resolver = Resolver.get_the_resolver()
+
+    uuid = str(uuid4())
+
+    # Make a copy of the identifier string list, just be safe
+    _identifier_list_cache[uuid] = [identifier for identifier in request_body]
+
+    list_id = IdentifierListId(uuid)
+
+    return list_id
+
+
+def handle_list_identifier_keys() -> List[str]:
+    """list of valid key strings for identifier sources and targets
+
+    Returns list of valid key strings for source and target parameters in other API calls  # noqa: E501
+
+    :rtype: List[str]
+    """
+    resolver = Resolver.get_the_resolver()
+
+    keys: List[str]
+    try:
+        keys = resolver.list_identifier_keys()
+
+    except IdentifierResolverException as e:
+        # need to log error here?
+        keys = list()
+
+    return keys
+
+
+def handle_translate(list_identifier, target_namespace) -> List[IdentifierMapping]:
+    """Translates list of identifiers from source to target namespace
+
+    Translates a previously posted list of identifiers from source namespace to a specified target namespace  # noqa: E501
+
+    :param list_identifier: UUID from identifier_list post of source identifiers
+    :type list_identifier: str
+    :param target_namespace: Target namespace for mapping of source identifiers
+    :type target_namespace: str
+
+    :rtype: List[IdentifierMapping]
+    """
+    # need to look up a previously cached uuid indexed identifier list here?
+    mappings = list()
+
+    if list_identifier in _identifier_list_cache:
+
+        identifier_list = _identifier_list_cache[list_identifier]
+
+        resolver = Resolver.get_the_resolver()
+
+        resolver.directly_load_identifiers(identifier_list)
+
+        try:
+            mappings = resolver.translate(target_namespace)
+
+        except IdentifierResolverException as ire:
+            # need to log error here?
+            pass
+    else:
+        # probably should report this as an error?
+        pass
+
+    # Load the return data accordingly (could be empty)
+
+    identifier_mappings: List[IdentifierMapping] = [
+        IdentifierMapping(
+            source_identifier=source_identifier,
+            target_namespace=target_namespace,
+            target_identifier=target_identifier
+        ) for source_identifier, target_identifier in mappings
+    ]
+
+    return identifier_mappings
+
+
+def handle_translate_one(source_identifier, target_namespace) -> IdentifierMapping:
+    """translates one identifier source to target namespace
+
+    Returns mapping of identifier source to its equivalent identifier in the specified target namespace  # noqa: E501
+
+    :param source_identifier: single source identifier to be mapped onto the target
+    :type source_identifier: str
+    :param target_namespace: target namespace for the mapping of the source
+    :type target_namespace: str
+
+    :rtype: IdentifierMapping
+    """
+    resolver = Resolver.get_the_resolver()
+
+    try:
+        source_identifier, target_identifier = resolver.translate_one(source_identifier, target_namespace)
+
+    except IdentifierResolverException as ire:
+        # need to log error here?
+        target_identifier = ""
+
+    mapping: IdentifierMapping = IdentifierMapping(source_identifier, target_namespace, target_identifier)
+
+    return mapping
