# ncats/translator/identifiers/server/openapi_server/controllers/public_controller.py
@@ -1,9 +1,10 @@
-import connexion
-import six
 
-from openapi_server.model.identifier_mapping import IdentifierMapping  # noqa: E501
-from openapi_server.model.inline_response201 import InlineResponse201  # noqa: E501
-from openapi_server import util
+from ncats.translator.identifiers.server.openapi_server.controllers.controller_impl import (
+    handle_identifier_list,
+    handle_list_identifier_keys,
+    handle_translate,
+    handle_translate_one
+)
 
 
 def identifier_list(request_body=None):  # noqa: E501
@@ -14,9 +15,9 @@ def identifier_list(request_body=None):  # noqa: E501
     :param request_body: Identifier list to post on server (for translation) 
     :type request_body: List[str]
 
-    :rtype: InlineResponse201
+    :rtype: IdentifierListId
     """
-    return 'do some magic!'
+    return handle_identifier_list(request_body)
 
 
 def list_identifier_keys():  # noqa: E501
@@ -27,7 +28,7 @@ def list_identifier_keys():  # noqa: E501
 
     :rtype: List[str]
     """
-    return 'do some magic!'
+    return handle_list_identifier_keys()
 
 
 def translate(list_identifier, target_namespace):  # noqa: E501
@@ -42,7 +43,7 @@ def translate(list_identifier, target_namespace):  # noqa: E501
 
     :rtype: List[IdentifierMapping]
     """
-    return 'do some magic!'
+    return handle_translate(list_identifier, target_namespace)
 
 
 def translate_one(source_identifier, target_namespace):  # noqa: E501
@@ -57,4 +58,4 @@ def translate_one(source_identifier, target_namespace):  # noqa: E501
 
     :rtype: IdentifierMapping
     """
-    return 'do some magic!'
+    return handle_translate_one(source_identifier, target_namespace)
