# ncats/translator/identifiers/server/openapi_server/model/__init__.py
@@ -3,8 +3,8 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from openapi_server.model.identifier_map import IdentifierMap
-from openapi_server.model.identifier_mapping import IdentifierMapping
-from openapi_server.model.inline_response200 import InlineResponse200
-from openapi_server.model.inline_response201 import InlineResponse201
-from openapi_server.model.query_id import QueryId
+from ncats.translator.identifiers.server.openapi_server.model.identifier_list_id import IdentifierListId
+from ncats.translator.identifiers.server.openapi_server.model.identifier_map import IdentifierMap
+from ncats.translator.identifiers.server.openapi_server.model.identifier_map_id import IdentifierMapId
+from ncats.translator.identifiers.server.openapi_server.model.identifier_mapping import IdentifierMapping
+from ncats.translator.identifiers.server.openapi_server.model.query_id import QueryId
