# ncats/translator/identifiers/server/openapi_server/model/identifier_list_id.py
@@ -5,22 +5,22 @@ from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from openapi_server.model.base_model_ import Model
-from openapi_server.model.query_id import QueryId
-from openapi_server import util
+from ncats.translator.identifiers.server.openapi_server.model.base_model_ import Model
+from ncats.translator.identifiers.server.openapi_server.model.query_id import QueryId
+from ncats.translator.identifiers.server.openapi_server import util
 
-from openapi_server.model.query_id import QueryId  # noqa: E501
+from ncats.translator.identifiers.server.openapi_server.model.query_id import QueryId  # noqa: E501
 
-class InlineResponse201(Model):
+class IdentifierListId(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, list_identifier=None):  # noqa: E501
-        """InlineResponse201 - a model defined in OpenAPI
+        """IdentifierListId - a model defined in OpenAPI
 
-        :param list_identifier: The list_identifier of this InlineResponse201.  # noqa: E501
+        :param list_identifier: The list_identifier of this IdentifierListId.  # noqa: E501
         :type list_identifier: QueryId
         """
         self.openapi_types = {
@@ -34,32 +34,32 @@ class InlineResponse201(Model):
         self._list_identifier = list_identifier
 
     @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse201':
+    def from_dict(cls, dikt) -> 'IdentifierListId':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The inline_response_201 of this InlineResponse201.  # noqa: E501
-        :rtype: InlineResponse201
+        :return: The IdentifierListId of this IdentifierListId.  # noqa: E501
+        :rtype: IdentifierListId
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def list_identifier(self):
-        """Gets the list_identifier of this InlineResponse201.
+        """Gets the list_identifier of this IdentifierListId.
 
 
-        :return: The list_identifier of this InlineResponse201.
+        :return: The list_identifier of this IdentifierListId.
         :rtype: QueryId
         """
         return self._list_identifier
 
     @list_identifier.setter
     def list_identifier(self, list_identifier):
-        """Sets the list_identifier of this InlineResponse201.
+        """Sets the list_identifier of this IdentifierListId.
 
 
-        :param list_identifier: The list_identifier of this InlineResponse201.
+        :param list_identifier: The list_identifier of this IdentifierListId.
         :type list_identifier: QueryId
         """
 
