# ncats/translator/identifiers/server/openapi_server/model/identifier_map_id.py
@@ -5,22 +5,22 @@ from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from openapi_server.model.base_model_ import Model
-from openapi_server.model.query_id import QueryId
-from openapi_server import util
+from ncats.translator.identifiers.server.openapi_server.model.base_model_ import Model
+from ncats.translator.identifiers.server.openapi_server.model.query_id import QueryId
+from ncats.translator.identifiers.server.openapi_server import util
 
-from openapi_server.model.query_id import QueryId  # noqa: E501
+from ncats.translator.identifiers.server.openapi_server.model.query_id import QueryId  # noqa: E501
 
-class InlineResponse200(Model):
+class IdentifierMapId(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, map_identifier=None):  # noqa: E501
-        """InlineResponse200 - a model defined in OpenAPI
+        """IdentifierMapId - a model defined in OpenAPI
 
-        :param map_identifier: The map_identifier of this InlineResponse200.  # noqa: E501
+        :param map_identifier: The map_identifier of this IdentifierMapId.  # noqa: E501
         :type map_identifier: QueryId
         """
         self.openapi_types = {
@@ -34,32 +34,32 @@ class InlineResponse200(Model):
         self._map_identifier = map_identifier
 
     @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse200':
+    def from_dict(cls, dikt) -> 'IdentifierMapId':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The inline_response_200 of this InlineResponse200.  # noqa: E501
-        :rtype: InlineResponse200
+        :return: The IdentifierMapId of this IdentifierMapId.  # noqa: E501
+        :rtype: IdentifierMapId
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def map_identifier(self):
-        """Gets the map_identifier of this InlineResponse200.
+        """Gets the map_identifier of this IdentifierMapId.
 
 
-        :return: The map_identifier of this InlineResponse200.
+        :return: The map_identifier of this IdentifierMapId.
         :rtype: QueryId
         """
         return self._map_identifier
 
     @map_identifier.setter
     def map_identifier(self, map_identifier):
-        """Sets the map_identifier of this InlineResponse200.
+        """Sets the map_identifier of this IdentifierMapId.
 
 
-        :param map_identifier: The map_identifier of this InlineResponse200.
+        :param map_identifier: The map_identifier of this IdentifierMapId.
         :type map_identifier: QueryId
         """
 
